--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <hr> 
   </hr>  
   <p class = "title">Communicate with the World</p>
-  <button class = "start"><span class = "bruh"> Start Translating </span></button>
+  <button class = "start" href="translator.html"><span class = "bruh"> Start Translating </span></button>
   <img src="Ellipse 1 (1).png" class ="Ellipse"></img>
   <img src = "s 1.png" class = "s"></img>
   <img src = "i 1.png" class = "i"></img>
