--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      </div>     
 </div>
 
-   <!-- <div class = "vid-container">
+   <div class = "vid-container">
      <div class="video">
           <span class= 'frame-border'>
           
@@ -113,7 +113,7 @@
         </div>
       </div>  
      <p class = "getresponse"></p> 
-        -->
+       
 
   <!-- </div>
   <div id="particles-js"></div>
