--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
   <hr> 
   </hr>  
   <p class = "title">Communicate with the World</p>
-  <button class = "start" href="translator.html"><span class = "bruh"> Start Translating </span></button>
   <img src="Ellipse 1 (1).png" class ="Ellipse"></img>
   <img src = "s 1.png" class = "s"></img>
   <img src = "i 1.png" class = "i"></img>
@@ -75,7 +74,7 @@
 
      <div class = "steps">
           <p class = "steptext">
-             hey
+             First, click the button below to go the translator page!
           </p>
           <img class = "arrow" src="Arrow 1.png"> </img>
      </div>     
@@ -83,16 +82,18 @@
      
       <div class = "steps">
           <p class = "steptext">
-               hey
+               Please hold up one hand with a sign of a number and click the capture button. Please keep the sign within the red rectangle.
           </p>
           <img class = "arrow1" src="Arrow 1.png"> </img>
      </div>     
      <div class = "steps">
           <p class = "steptext">
-               hey
+               You can watch as your result gets translated in real time!
           </p>
      </div>     
 </div>
+<a href="https://exchange.peddie.org/ASLProjUpdate/translator.html"> <button class = "start" ><span class = "bruh"> Start Translating </span></button></a>
+
 
    <!-- <div class = "vid-container">
      <div class="video">
