--- a/contact_us.html
+++ b/contact_us.html
@@ -5,13 +5,13 @@
       <title>ASL</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
       <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
         <div class="container">
           <span class="icon-bar">
-            <a class="navbar-brand" href="home.html"><img src="pictures/ASL_4.png" class="img-responsive" alt="" /></a>
+            <a class="navbar-brand" href="index.html"><img src="logo.JPG" class="img-responsive" alt="" /></a>
           </span>
         </div>
     
