--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
     <div class="container">
       <span class="icon-bar">
-        <a class="navbar-brand" href="home.html"><img src="logo.JPG" class="img-responsive" alt="" /></a>
+        <a class="navbar-brand" href="index.html"><img src="logo.JPG" class="img-responsive" alt="" /></a>
       </span>
     </div>
 
@@ -66,6 +66,7 @@
   </nav>
   <hr> 
   </hr>  
+  <p class = "titles">SignIt</p>
   <p class = "title">Communicate with the World</p>
   <img src="Ellipse 1 (1).png" class ="Ellipse"></img>
   <img src = "s 1.png" class = "s"></img>
@@ -84,8 +85,9 @@
           <p class = "steptext">
                Please hold up one hand with a sign of a number and click the capture button. Please keep the sign within the red rectangle.
           </p>
-          <img class = "arrow1" src="Arrow 1.png"> </img>
+         
      </div>     
+     <img class = "arrow1" src="Arrow 1.png"> </img>
      <div class = "steps">
           <p class = "steptext">
                You can watch as your result gets translated in real time!
